message appears when ship set sails and docks. Need to fix message's div's visibility for last ports

--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,11 @@ body {
     background-color: navy;
     border-bottom: 4px solid rgb(0, 0, 68);
     color: white;
-    /* font-family: inherit; */
     padding: 10px 20px;
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     font-family: 'Press Start 2P', cursive;
 }
 
@@ -55,4 +54,18 @@ body {
     background-color: rgb(0, 0, 68);
     border-bottom-width: 0;
     padding-top: 14px;
+}
+
+#sailbutton:hover {
+    cursor: pointer;
+}
+
+#message {
+    padding: 16px;
+    font-family: 'Press Start 2P', cursive;
+    position: absolute;
+    width: 100vw;
+    bottom: 0;
+    border-top: 3px solid black;
+    background-color: white;
 }
